--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <section>
-      <h1>Lorem ipsum dolor sit amet.</h1>
+      <h1>Lorem</h1>
       <!-- Path to images as from index.html file -->
       <img src="./img/javascript.svg" alt="" />
     </section>
