--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,10 @@
   <body>
     <!-- Loads the specified .html file -->
     <load ="partials/header.html" />
+    <load ="partials/hero.html" />
+
+    <!-- components -->
+    <load ="partials/modal.html" />
 
     <script type="module" src="/main.js"></script>
   </body>
